--- a/Dockerfile_ubuntu
+++ b/Dockerfile_ubuntu
@@ -7,16 +7,56 @@ FROM ubuntu
 # Add a user/file/group to play around with permissions
 RUN apt update
 RUN apt-get update
-RUN apt -y install systemd
+
+# Make manuals available
 RUN apt -y install man-db
+RUN apt -y install unminimize
+RUN yes | unminimize
+
+# Docker
+
+# Add Docker's official GPG key:
+RUN sudo apt-get update
+RUN sudo apt-get install ca-certificates curl
+RUN sudo install -m 0755 -d /etc/apt/keyrings
+RUN sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+RUN sudo chmod a+r /etc/apt/keyrings/docker.asc
+  
+# Add the repository to Apt sources:
+RUN echo \
+    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+    $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+    sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+RUN sudo apt-get update
+
+# Install Docker packages:
+RUN yes | sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+
+# Virtualization
+RUN apt -y install qemu-kvm libvirt-daemon-system virt-manager libvirt-clients virtinst bridge-utils
+# wget https://cloud-images.ubuntu.com/noble/current/noble-server-cloudimg-arm64.img
+# wget https://cloud-images.ubuntu.com/noble/current/SHA256SUMS.gpg
+# wget https://cloud-images.ubuntu.com/noble/current/SHA256SUMS
+# sha256sum -c SHA256SUMS 2>&1 | grep OK
+# qemu-img info noble-server-cloudimg-arm64.img
+# qemu-img resize noble-server-cloudimg-arm64.img 10G
+
+# misc packages
+RUN apt -y install debhelper
+RUN apt -y install systemd
 RUN apt install nano
 RUN apt install bash-completion
-RUN yes | unminimize
 RUN apt -y install less
 RUN apt -y install vim
-# add new packages below these lines
 RUN apt -y install zip
 RUN apt -y install git
+RUN apt -y install cron
+RUN apt -y install anacron
+RUN apt -y install at
+RUN apt -y install sudo 
+RUN apt install wget
+
+# Add new installs here
 
 RUN useradd mf
 RUN groupadd family
